# linux-2024-25

./: CMakeLists.txt  README.md
Copy/: CMakeLists.txt  mycopy.cpp
Demo/Allocator/: CMakeLists.txt  gpt_test_allocator.cpp  my_allocator.cpp
Demo/Blocking_queue/: CMakeLists.txt  blocking_queue.cpp
Demo/Directory_watcher/: CMakeLists.txt  directory_creater.sh  dr_watcher_test_1.cpp  dr_watcher_test_2.cpp  expected_results.txt  join.sh  modify.sh  results.txt  watcher_demo  watcher_demo.cpp  watcher_tests.cpp  wathcer_demo
Demo/Directory_watcher/watcher_directory/: file1.txt
Demo/Do_Command/: CMakeLists.txt  do_command.cpp  do_command_xargs.cpp  xargs
Demo/Duplication_Spell/: CMakeLists.txt  diff_fd_write.cpp  imlement_of_magic.h  new_pts.txt
Demo/FTP/: CMakeLists.txt  README.md  client.cpp  config.txt  run_test.sh  server.cpp
Demo/Iterator/: ArgumentParser.cpp  CMakeLists.txt  CircularIntIterator.cpp  Directory.cpp  FilterIntegerIterator.cpp  ReverseArrayIterator.cpp
Demo/Ser_Des/: CMakeLists.txt  main.cpp  map.txt  ser_des.h  test_case_1.cpp  test_case_2.cpp  test_case_3.cpp  test_case_4_not_copiable.cpp  test_cases.cpp
Demo/Spionen_handler/: CMakeLists.txt  all_run.cpp  commissioner.cpp  spionen.cpp
Demo/Thread/: BlockingQueue.cpp  CMakeLists.txt  ThreadPool.cpp
Demo/Threads/: CMakeLists.txt  LinuxMutex.cpp  LinuxMutexGuard.cpp  LinuxThread.cpp
Demo/Xargs/: CMakeLists.txt  do_command_xargs.cpp
Duplication_Spell/: diff_fd_write.cpp  do_magic.cpp  imlement_of_magic.h
SuperRM/: CMakeLists.txt  main.cpp
Utils/: CMakeLists.txt
Utils/Allocator/: my_allocator.cpp  my_allocator.h
Utils/Blocking_queue/: blocking_queue.cpp  blocking_queue.h
Utils/Directory_watcher/: dr_watcher.cpp  dr_watcher.h
Utils/Do_Command/: do_command.cpp  do_command.h
Utils/FTP/: AuthManager.h  CmdLineParser.h  CommandHandler.h  FTPCommands.h  FTPConnection.h  FTPConstants.h  FTPServer.h  ListCommandHandler.h  PortCommandHandler.h  RetrCommandHandler.h  SimpleCommandHandler.h  SocketUtils.h  StorCommandHandler.h
Utils/Iterator/: ArgumentParser.cpp  ArgumentParser.h  CircularIntIterator.h  CircularIterator.cpp  CircularIterator.h  Directory.cpp  Directory.h  FilterIntegerIterator.cpp  FilterIntegerIterator.h  ReverseArrayIterator.cpp  ReverseArrayIterator.h
Utils/Ser_Des/: ser_des.cpp  ser_des.h
Utils/Thread/: BlockingQueue.h  ThreadPool.h
Utils/Threads/: LinuxMutex.h  LinuxMutexGuard.h  LinuxThread.h
git_hello_world/: CMakeLists.txt  hello_world.cpp
git_homework_1/: CMakeLists.txt  git_1.cpp
